# cryptfs

./: Makefile  README.md  build_and_test.sh  how_to_run_and_test.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: audit.rs  key.rs  mod.rs  mount.rs  policy.rs  status.rs
daemon/: Cargo.toml
daemon/src/: api.rs  audit.rs  keyring.rs  keystore.rs  main.rs  provider.rs
demo_encrypted/: .master_key  append.txt  batch_00.txt  batch_01.txt  batch_02.txt  batch_03.txt  batch_04.txt  batch_05.txt  batch_06.txt  batch_07.txt  batch_08.txt  batch_09.txt  batch_10.txt  batch_11.txt  batch_12.txt  batch_13.txt  batch_14.txt  batch_15.txt  batch_16.txt  batch_17.txt  batch_18.txt  batch_19.txt  hello.txt
demo_plaintext/: append.txt  batch_00.txt  batch_01.txt  batch_02.txt  batch_03.txt  batch_04.txt  batch_05.txt  batch_06.txt  batch_07.txt  batch_08.txt  batch_09.txt  batch_10.txt  batch_11.txt  batch_12.txt  batch_13.txt  batch_14.txt  batch_15.txt  batch_16.txt  batch_17.txt  batch_18.txt  batch_19.txt  hello.txt
docker/: Dockerfile.test  docker-compose.yml  test_entrypoint.sh
docs/: admin-guide.md  cryptofs-presentation.html  encryption-format.md  guarded.md  ubuntu-guide.md
kernel/: Makefile  audit.c  crypto.c  cryptofs.h  dentry.c  file.c  inode.c  lookup.c  main.c  mmap.c  netlink.c  policy.c  super.c
scripts/: deploy-slides.sh
solr-cryptofs/: README.md  demo.sh  setup.sh  teardown.sh
solr-encrypted/: Dockerfile  README.md  demo.sh  docker-compose.yml  entrypoint.sh
tools/: add_policy.c  set_key.c
vagrant/: Vagrantfile  conversation.md  (+1 more)
(+20 files in other folders)
